# light_curtain

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  plugins.xml
cfg/: VelocityCurtain.cfg  light_curtain.cfg
include/light_curtain/: box_robot_body.h  filter.h  forward_velocity_filter.h  laser_ros.h  light_curtain.h  pointcloud_ros.h  types.h  velocity_curtain_nodelet.h  velocity_filter.h
launch/: nodelet_sample.launch
src/: box_robot_body.cpp  forward_velocity_filter.cpp  laser_ros.cpp  light_curtain.cpp  pointcloud_ros.cpp  velocity_curtain.cpp  velocity_curtain_nodelet.cpp  velocity_filter.cpp
test/: test_box_robot_body.cpp  test_light_curtain.cpp  test_velocity_filter.cpp
